at 500px margin drops to 0 to fix spacing issues on mobile

--- a/style3.css
+++ b/style3.css
@@ -77,6 +77,7 @@ a {
 @media (max-width: 500px) {
     body {
         padding-top: 0;
+        margin: 0;
     }
     .head {
         flex-wrap: wrap;
